--- a/rumour_veracity.ipynb
+++ b/rumour_veracity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 90,
    "id": "limiting-genetics",
    "metadata": {},
    "outputs": [],
@@ -14,8 +14,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "micro-conference",
+   "metadata": {},
+   "source": [
+    "# Data Loading\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 91,
    "id": "deluxe-subscriber",
    "metadata": {},
    "outputs": [],
@@ -29,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 92,
    "id": "boring-serial",
    "metadata": {},
    "outputs": [],
@@ -51,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 93,
    "id": "basic-factor",
    "metadata": {},
    "outputs": [],
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 94,
    "id": "changed-disability",
    "metadata": {},
    "outputs": [],
@@ -93,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 95,
    "id": "covered-aggregate",
    "metadata": {
     "scrolled": false
@@ -147,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 96,
    "id": "individual-monthly",
    "metadata": {},
    "outputs": [],
@@ -195,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 97,
    "id": "hollywood-algebra",
    "metadata": {},
    "outputs": [],
@@ -211,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 98,
    "id": "driven-crowd",
    "metadata": {},
    "outputs": [],
@@ -235,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 99,
    "id": "chemical-vector",
    "metadata": {},
    "outputs": [],
@@ -248,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 100,
    "id": "upset-coordinate",
    "metadata": {},
    "outputs": [
@@ -417,7 +425,7 @@
        "[5568 rows x 5 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 101,
    "id": "studied-pulse",
    "metadata": {},
    "outputs": [
@@ -597,7 +605,7 @@
        "[1066 rows x 5 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 102,
    "id": "macro-affair",
    "metadata": {},
    "outputs": [
@@ -764,7 +772,7 @@
        "[686 rows x 5 columns]"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 103,
    "id": "dedicated-chapter",
    "metadata": {},
    "outputs": [
@@ -931,7 +939,7 @@
        "[690 rows x 5 columns]"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +950,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "returning-interim",
+   "id": "dressed-ethnic",
    "metadata": {},
    "source": [
     "# Preprocessing"
