--- a/rumour_veracity.ipynb
+++ b/rumour_veracity.ipynb
@@ -10,7 +10,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
-    "import json"
+    "import json\n",
+    "import spacy"
    ]
   },
   {
@@ -74,10 +75,7 @@
     "        self.user_metadata = None\n",
     "        \n",
     "    def add_category(self, category):\n",
-    "        self.category = category\n",
-    "        \n",
-    "#     def __repr__(self):\n",
-    "#         return f\"tweet {self.post_id}: {self.post_content}, category: {self.category}\""
+    "        self.category = category"
    ]
   },
   {
@@ -93,10 +91,7 @@
     "        self.replies = []\n",
     "        \n",
     "    def add_reply(self, reply: Tweet):\n",
-    "        self.replies.append(reply)\n",
-    "        \n",
-    "#     def __repr__(self):\n",
-    "#         return f\"source {self.tweet}: {len(self.replies)} replies\""
+    "        self.replies.append(reply)"
    ]
   },
   {
@@ -949,6 +944,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "trained-celtic",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataframes = [training_tweets_df, test_tweets_df, training_reddit_df, test_reddit_df]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "dressed-ethnic",
    "metadata": {},
@@ -958,11 +963,228 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "every-update",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nlp = spacy.load(\"en_core_web_sm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "adopted-ending",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocessing(column):\n",
+    "    lemmatizer = nlp.get_pipe(\"lemmatizer\")        \n",
+    "    doc = nlp(column)\n",
+    "    lemmas = []\n",
+    "    for token in doc:\n",
+    "        if token.is_stop:\n",
+    "            continue\n",
+    "        elif token.pos_ == \"NUM\":\n",
+    "            lemmas.append('#')\n",
+    "        elif token.pos_ == \"SYM\":\n",
+    "            continue\n",
+    "        else:\n",
+    "            lemmas.append(token.lemma_.lower())\n",
+    "    return lemmas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "internal-tamil",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for df in dataframes:\n",
+    "    df.loc[:, 'source_tweet'] = df['source_tweet'].apply(preprocessing)\n",
+    "    df.loc[:, 'reply'] = df['reply'].apply(preprocessing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "infrared-insider",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>topic</th>\n",
+       "      <th>source_tweet</th>\n",
+       "      <th>reply</th>\n",
+       "      <th>external_urls</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>charliehebdo</td>\n",
+       "      <td>[france, :, #, people, dead, shoot, hq, satiri...</td>\n",
+       "      <td>[france, :, #, people, dead, shoot, hq, satiri...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>support</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>charliehebdo</td>\n",
+       "      <td>[france, :, #, people, dead, shoot, hq, satiri...</td>\n",
+       "      <td>[mt, @euronews, france, :, #, dead, shoot, hq,...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>comment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>charliehebdo</td>\n",
+       "      <td>[france, :, #, people, dead, shoot, hq, satiri...</td>\n",
+       "      <td>[@j0nathandavis, ?, stupid, partial, opinion, ...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>deny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>charliehebdo</td>\n",
+       "      <td>[france, :, #, people, dead, shoot, hq, satiri...</td>\n",
+       "      <td>[@nanospawn, socialists, ,, antisemites, ,, an...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>comment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>charliehebdo</td>\n",
+       "      <td>[france, :, #, people, dead, shoot, hq, satiri...</td>\n",
+       "      <td>[@euronews, @tradedesk_steve, french, crime, p...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>query</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5563</th>\n",
+       "      <td>sydneysiege</td>\n",
+       "      <td>[police, confirm, #, sydneysiege, finally, ., ...</td>\n",
+       "      <td>[@angus_ol, #, watch, unfold, ,, shake, ,, hea...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>support</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5564</th>\n",
+       "      <td>sydneysiege</td>\n",
+       "      <td>[police, confirm, #, sydneysiege, finally, ., ...</td>\n",
+       "      <td>[@emaccaz, _, omfg, 😱, 😱, 😱, 😱, 😱]</td>\n",
+       "      <td>False</td>\n",
+       "      <td>comment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5565</th>\n",
+       "      <td>sydneysiege</td>\n",
+       "      <td>[police, confirm, #, sydneysiege, finally, ., ...</td>\n",
+       "      <td>[@angus_ol, thank, god, safe, ., wound, ,, saf...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>support</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5566</th>\n",
+       "      <td>sydneysiege</td>\n",
+       "      <td>[police, confirm, #, sydneysiege, finally, ., ...</td>\n",
+       "      <td>[@angus_ol, thank, god, ,, finally, safe, ,, w...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>comment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5567</th>\n",
+       "      <td>sydneysiege</td>\n",
+       "      <td>[police, confirm, #, sydneysiege, finally, ., ...</td>\n",
+       "      <td>[@angus_ol, :(]</td>\n",
+       "      <td>False</td>\n",
+       "      <td>comment</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5568 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             topic                                       source_tweet  \\\n",
+       "0     charliehebdo  [france, :, #, people, dead, shoot, hq, satiri...   \n",
+       "1     charliehebdo  [france, :, #, people, dead, shoot, hq, satiri...   \n",
+       "2     charliehebdo  [france, :, #, people, dead, shoot, hq, satiri...   \n",
+       "3     charliehebdo  [france, :, #, people, dead, shoot, hq, satiri...   \n",
+       "4     charliehebdo  [france, :, #, people, dead, shoot, hq, satiri...   \n",
+       "...            ...                                                ...   \n",
+       "5563   sydneysiege  [police, confirm, #, sydneysiege, finally, ., ...   \n",
+       "5564   sydneysiege  [police, confirm, #, sydneysiege, finally, ., ...   \n",
+       "5565   sydneysiege  [police, confirm, #, sydneysiege, finally, ., ...   \n",
+       "5566   sydneysiege  [police, confirm, #, sydneysiege, finally, ., ...   \n",
+       "5567   sydneysiege  [police, confirm, #, sydneysiege, finally, ., ...   \n",
+       "\n",
+       "                                                  reply  external_urls  \\\n",
+       "0     [france, :, #, people, dead, shoot, hq, satiri...          False   \n",
+       "1     [mt, @euronews, france, :, #, dead, shoot, hq,...          False   \n",
+       "2     [@j0nathandavis, ?, stupid, partial, opinion, ...          False   \n",
+       "3     [@nanospawn, socialists, ,, antisemites, ,, an...          False   \n",
+       "4     [@euronews, @tradedesk_steve, french, crime, p...          False   \n",
+       "...                                                 ...            ...   \n",
+       "5563  [@angus_ol, #, watch, unfold, ,, shake, ,, hea...          False   \n",
+       "5564                 [@emaccaz, _, omfg, 😱, 😱, 😱, 😱, 😱]          False   \n",
+       "5565  [@angus_ol, thank, god, safe, ., wound, ,, saf...          False   \n",
+       "5566  [@angus_ol, thank, god, ,, finally, safe, ,, w...          False   \n",
+       "5567                                    [@angus_ol, :(]          False   \n",
+       "\n",
+       "     category  \n",
+       "0     support  \n",
+       "1     comment  \n",
+       "2        deny  \n",
+       "3     comment  \n",
+       "4       query  \n",
+       "...       ...  \n",
+       "5563  support  \n",
+       "5564  comment  \n",
+       "5565  support  \n",
+       "5566  comment  \n",
+       "5567  comment  \n",
+       "\n",
+       "[5568 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_tweets_df"
+   ]
   }
  ],
  "metadata": {
