Fix: Changed to mean embeddings in hand-crafted features.

--- a/rumour_veracity_features.ipynb
+++ b/rumour_veracity_features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 1,
    "id": "limiting-genetics",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 2,
    "id": "deluxe-subscriber",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 3,
    "id": "boring-serial",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 4,
    "id": "basic-factor",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 5,
    "id": "changed-disability",
    "metadata": {},
    "outputs": [],
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 6,
    "id": "covered-aggregate",
    "metadata": {
     "scrolled": false
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 7,
    "id": "individual-monthly",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 8,
    "id": "driven-crowd",
    "metadata": {},
    "outputs": [],
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 9,
    "id": "every-update",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 10,
    "id": "small-walter",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 11,
    "id": "agricultural-spiritual",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 12,
    "id": "chemical-vector",
    "metadata": {},
    "outputs": [],
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 13,
    "id": "upset-coordinate",
    "metadata": {},
    "outputs": [],
@@ -302,23 +302,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 14,
    "id": "studied-pulse",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[list(['france', '#', 'dead', 'hq', 'weekly', 'accord']) 'support']\n",
-      " [list(['mt', '@euronews', 'france', '#', 'dead', 'hq', 'weekly', 'jews', 'nuke', 'israel'])\n",
-      "  'comment']\n",
-      " [list(['?', 'like', 'add', 'noise']) 'deny']\n",
-      " [list(['usual']) 'comment']\n",
-      " [list(['@euronews', 'crime', 'moslem', '?']) 'query']]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
     "\n",
@@ -369,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 15,
    "id": "54c76ae6",
    "metadata": {},
    "outputs": [],
@@ -394,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 16,
    "id": "629560ca",
    "metadata": {},
    "outputs": [
@@ -404,7 +391,7 @@
        "((5568, 3874), (5568,), (1066, 3874), (1066,))"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 17,
    "id": "0f139071",
    "metadata": {},
    "outputs": [
@@ -470,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 18,
    "id": "371b05f7",
    "metadata": {},
    "outputs": [
@@ -511,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 19,
    "id": "3c8225fd",
    "metadata": {},
    "outputs": [
@@ -520,24 +507,24 @@
      "output_type": "stream",
      "text": [
       "SGD, 1-grams:\n",
-      "{0: 972, 1: 35, 2: 11, 3: 48}\n",
+      "{0: 961, 1: 39, 2: 18, 3: 48}\n",
       "{0: 771, 1: 147, 2: 92, 3: 56}\n",
-      " Classification accuracy:  0.7129455909943715\n",
+      " Classification accuracy:  0.7110694183864915\n",
       " Confusion matrix: \n",
-      " [[731  13   4  23]\n",
-      " [136   5   2   4]\n",
-      " [ 70  15   5   2]\n",
+      " [[725  17   6  23]\n",
+      " [135   5   3   4]\n",
+      " [ 66  15   9   2]\n",
       " [ 35   2   0  19]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     comment       0.75      0.95      0.84       771\n",
-      "     support       0.14      0.03      0.05       147\n",
-      "        deny       0.45      0.05      0.10        92\n",
+      "     comment       0.75      0.94      0.84       771\n",
+      "     support       0.13      0.03      0.05       147\n",
+      "        deny       0.50      0.10      0.16        92\n",
       "       query       0.40      0.34      0.37        56\n",
       "\n",
       "    accuracy                           0.71      1066\n",
-      "   macro avg       0.44      0.34      0.34      1066\n",
-      "weighted avg       0.62      0.71      0.64      1066\n",
+      "   macro avg       0.44      0.35      0.35      1066\n",
+      "weighted avg       0.63      0.71      0.65      1066\n",
       "\n"
      ]
     }
@@ -552,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 20,
    "id": "6f19a4c1",
    "metadata": {},
    "outputs": [
@@ -601,18 +588,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 145,
    "id": "71442bc8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import gensim.downloader as api\n",
-    "model = api.load(\"glove-twitter-25\")"
+    "model = api.load(\"glove-twitter-25\")\n",
+    "embedding_length = 25"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 146,
    "id": "f98dfc24",
    "metadata": {},
    "outputs": [],
@@ -628,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 147,
    "id": "c989cfff",
    "metadata": {},
    "outputs": [],
@@ -656,8 +644,16 @@
     "            number = 1\n",
     "        # 25 features\n",
     "        elif token.text in model:\n",
-    "            word_embeddings.extend(model[token.text])\n",
-    "\n",
+    "            # print(len(model[token.text]))\n",
+    "            word_embeddings.append(model[token.text])\n",
+    "            \n",
+    "    if len(word_embeddings) == 0:\n",
+    "        word_embeddings.append([0]*embedding_length)\n",
+    "        \n",
+    "    word_embeddings = np.array(word_embeddings)\n",
+    "    \n",
+    "    # \n",
+    "    features.extend(list(np.mean(word_embeddings, axis = 0)))\n",
     "    # contains number\n",
     "    features.append(number)\n",
     "    \n",
@@ -684,17 +680,13 @@
     "    \n",
     "    # length of sentence\n",
     "    features.append(len(sentence))\n",
-    "    \n",
-    "    features.extend(word_embeddings)\n",
-    "    \n",
-    "    \n",
     "\n",
     "    return features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 148,
    "id": "7618ca7d",
    "metadata": {},
    "outputs": [],
@@ -712,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 149,
    "id": "41bb7fc6",
    "metadata": {},
    "outputs": [],
@@ -723,69 +715,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 150,
+   "id": "1752936b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_data_features = training_tweets_df_features[['reply', 'category']].values\n",
+    "test_data_features = test_tweets_df_features[['reply', 'category']].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
    "id": "bf4347bc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((1066, 607), (5568, 607))"
+       "((5568, 32), (1066,))"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def find_max_list(list):\n",
-    "    list_len = [len(i) for i in list]\n",
-    "    return max(list_len)\n",
+    "X_train_pad = np.array([i for i in training_data_features[:, 0]])\n",
+    "y_train_pad = np.array([label_map[i] for i in training_data_features[:, 1]])\n",
     "\n",
-    "\n",
-    "training_data_features = training_tweets_df_features[['reply', 'category']].values\n",
-    "test_data_features = test_tweets_df_features[['reply', 'category']].values\n",
-    "\n",
-    "X_train_features = training_data_features[:, 0]\n",
-    "y_train_features = np.array([label_map[i] for i in training_data_features[:, 1]])\n",
-    "\n",
-    "X_test_features = test_data_features[:, 0]\n",
+    "X_test_pad = np.array([i for i in test_data_features[:, 0]])\n",
     "y_test_features = np.array([label_map[i] for i in test_data_features[:, 1]])\n",
     "\n",
-    "max_len_train = find_max_list(X_train_features)\n",
-    "max_len_test = find_max_list(X_test_features)\n",
-    "\n",
-    "max_len = max(max_len_train, max_len_test)\n",
-    "\n",
-    "X_train_pad = []\n",
-    "for i in X_train_features:\n",
-    "    # print(i)\n",
-    "    if len(i) < max_len:\n",
-    "        X_train_pad.append(i + [0]*(max_len-len(i)))\n",
-    "    else:\n",
-    "        X_train_pad.append(i)\n",
-    "\n",
-    "X_train_pad = np.array(X_train_pad)\n",
-    "\n",
-    "\n",
-    "\n",
-    "X_test_pad = []\n",
-    "for i in X_test_features:\n",
-    "    # print(i)\n",
-    "    if len(i) < max_len:\n",
-    "        X_test_pad.append(i + [0]*(max_len-len(i)))\n",
-    "    else:\n",
-    "        X_test_pad.append(i)\n",
-    "\n",
-    "X_test_pad = np.array(X_test_pad)\n",
-    "\n",
-    "X_test_pad.shape, X_train_pad.shape"
+    "X_train_pad.shape, y_test_features.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 152,
    "id": "fc31dfa0",
    "metadata": {},
    "outputs": [
@@ -831,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 153,
    "id": "4f5d618e",
    "metadata": {},
    "outputs": [
@@ -840,24 +808,24 @@
      "output_type": "stream",
      "text": [
       "Logistic Regression:\n",
-      "{0: 968, 1: 23, 2: 13, 3: 62}\n",
+      "{0: 1007, 1: 23, 3: 36}\n",
       "{0: 771, 1: 147, 2: 92, 3: 56}\n",
-      " Classification accuracy:  0.7166979362101313\n",
+      " Classification accuracy:  0.7467166979362101\n",
       " Confusion matrix: \n",
-      " [[724  12   9  26]\n",
-      " [132   9   0   6]\n",
-      " [ 85   2   3   2]\n",
-      " [ 27   0   1  28]]\n",
+      " [[755   7   0   9]\n",
+      " [131  15   0   1]\n",
+      " [ 91   1   0   0]\n",
+      " [ 30   0   0  26]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     comment       0.75      0.94      0.83       771\n",
-      "     support       0.39      0.06      0.11       147\n",
-      "        deny       0.23      0.03      0.06        92\n",
-      "       query       0.45      0.50      0.47        56\n",
+      "     comment       0.75      0.98      0.85       771\n",
+      "     support       0.65      0.10      0.18       147\n",
+      "        deny       0.00      0.00      0.00        92\n",
+      "       query       0.72      0.46      0.57        56\n",
       "\n",
-      "    accuracy                           0.72      1066\n",
-      "   macro avg       0.46      0.38      0.37      1066\n",
-      "weighted avg       0.64      0.72      0.65      1066\n",
+      "    accuracy                           0.75      1066\n",
+      "   macro avg       0.53      0.39      0.40      1066\n",
+      "weighted avg       0.67      0.75      0.67      1066\n",
       "\n"
      ]
     }
@@ -872,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 166,
    "id": "17f2c383",
    "metadata": {},
    "outputs": [
@@ -881,30 +849,30 @@
      "output_type": "stream",
      "text": [
       "SGD:\n",
-      "{0: 1021, 2: 1, 3: 44}\n",
+      "{0: 1021, 1: 4, 3: 41}\n",
       "{0: 771, 1: 147, 2: 92, 3: 56}\n",
       " Classification accuracy:  0.7345215759849906\n",
       " Confusion matrix: \n",
-      " [[756   0   0  15]\n",
+      " [[757   2   0  12]\n",
       " [144   0   0   3]\n",
-      " [ 91   0   1   0]\n",
+      " [ 90   2   0   0]\n",
       " [ 30   0   0  26]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "     comment       0.74      0.98      0.84       771\n",
       "     support       0.00      0.00      0.00       147\n",
-      "        deny       1.00      0.01      0.02        92\n",
-      "       query       0.59      0.46      0.52        56\n",
+      "        deny       0.00      0.00      0.00        92\n",
+      "       query       0.63      0.46      0.54        56\n",
       "\n",
       "    accuracy                           0.73      1066\n",
-      "   macro avg       0.58      0.36      0.35      1066\n",
-      "weighted avg       0.65      0.73      0.64      1066\n",
+      "   macro avg       0.34      0.36      0.35      1066\n",
+      "weighted avg       0.57      0.73      0.64      1066\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "SGD_features = SGDClassifier(max_iter=1000)\n",
+    "SGD_features = SGDClassifier(random_state=0)\n",
     "SGD_features.fit(X_train_pad, y_train)\n",
     "y_pred = SGD_features.predict(X_test_pad)\n",
     "\n",
@@ -913,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 167,
    "id": "52c86272",
    "metadata": {},
    "outputs": [
@@ -922,24 +890,24 @@
      "output_type": "stream",
      "text": [
       "Linear_SVC:\n",
-      "{0: 989, 1: 18, 2: 4, 3: 55}\n",
+      "{0: 1002, 1: 16, 3: 48}\n",
       "{0: 771, 1: 147, 2: 92, 3: 56}\n",
-      " Classification accuracy:  0.725140712945591\n",
+      " Classification accuracy:  0.7401500938086304\n",
       " Confusion matrix: \n",
-      " [[737  11   1  22]\n",
-      " [137   7   1   2]\n",
-      " [ 88   0   1   3]\n",
-      " [ 27   0   1  28]]\n",
+      " [[750   3   0  18]\n",
+      " [133  12   0   2]\n",
+      " [ 90   1   0   1]\n",
+      " [ 29   0   0  27]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "     comment       0.75      0.96      0.84       771\n",
-      "     support       0.39      0.05      0.08       147\n",
-      "        deny       0.25      0.01      0.02        92\n",
-      "       query       0.51      0.50      0.50        56\n",
+      "     comment       0.75      0.97      0.85       771\n",
+      "     support       0.75      0.08      0.15       147\n",
+      "        deny       0.00      0.00      0.00        92\n",
+      "       query       0.56      0.48      0.52        56\n",
       "\n",
-      "    accuracy                           0.73      1066\n",
-      "   macro avg       0.47      0.38      0.36      1066\n",
-      "weighted avg       0.64      0.73      0.65      1066\n",
+      "    accuracy                           0.74      1066\n",
+      "   macro avg       0.52      0.38      0.38      1066\n",
+      "weighted avg       0.67      0.74      0.66      1066\n",
       "\n"
      ]
     }
