--- a/rumour_veracity.ipynb
+++ b/rumour_veracity.ipynb
@@ -1463,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 62,
    "id": "cfd78790",
    "metadata": {},
    "outputs": [],
@@ -1474,7 +1474,8 @@
     "import keras.preprocessing.sequence as seq\n",
     "from keras.preprocessing.text import Tokenizer\n",
     "from keras.utils import np_utils\n",
-    "from sklearn.preprocessing import LabelEncoder\n"
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.metrics import classification_report, f1_score"
    ]
   },
   {
@@ -1607,127 +1608,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "id": "99a7ddca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[  0   0   0 ...  14  15   8]\n",
-      " [  0   0   0 ... 209 210  53]\n",
-      " [  0   0   0 ... 116   1  15]\n",
-      " ...\n",
-      " [  0   0   0 ... 487 173 488]\n",
-      " [  0   0   0 ...  38 492 493]\n",
-      " [  0   0   0 ...  37   7 497]]\n",
-      "[[0. 0. 0. 1.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [0. 0. 0. 1.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]\n",
-      " [1. 0. 0. 0.]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "vocabulary_size = 300000\n",
@@ -1735,24 +1619,27 @@
     "tokenizer.fit_on_texts(training_tweets_df['source_reply'])\n",
     "train_sequences = tokenizer.texts_to_sequences(training_tweets_df['source_reply'])\n",
     "\n",
-    "tokenizer.fit_on_texts(training_tweets_df['source_reply'])\n",
-    "test_sequences = tokenizer.texts_to_sequences(training_tweets_df['source_reply'])\n",
+    "tokenizer.fit_on_texts(test_tweets_df['source_reply'])\n",
+    "test_sequences = tokenizer.texts_to_sequences(test_tweets_df['source_reply'])\n",
     "\n",
     "\n",
     "X_train = keras.preprocessing.sequence.pad_sequences(train_sequences, maxlen=80, dtype='int32')\n",
+    "X_test = keras.preprocessing.sequence.pad_sequences(test_sequences, maxlen=80, dtype='int32')\n",
+    "\n",
     "\n",
     "encoder_train = LabelEncoder()\n",
     "encoder_train.fit(training_tweets_df['category'])\n",
     "y_train = np_utils.to_categorical(encoder_train.transform(training_tweets_df['category']))\n",
     "\n",
-    "\n",
-    "print(X_train)\n",
-    "print(y_train)\n"
+    "encoder_test = LabelEncoder()\n",
+    "encoder_test.fit(test_tweets_df['category'])\n",
+    "y_test = np_utils.to_categorical(encoder_test.transform(test_tweets_df['category']))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
    "id": "327f87b3",
    "metadata": {},
    "outputs": [
@@ -1760,16 +1647,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_11\"\n",
+      "Model: \"sequential_13\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " embedding_10 (Embedding)    (None, 80, 100)           2000000   \n",
+      " embedding_12 (Embedding)    (None, 80, 100)           2000000   \n",
       "                                                                 \n",
-      " bidirectional_6 (Bidirectio  (None, 200)              160800    \n",
+      " bidirectional_8 (Bidirectio  (None, 200)              160800    \n",
       " nal)                                                            \n",
       "                                                                 \n",
-      " dense_11 (Dense)            (None, 4)                 804       \n",
+      " dense_13 (Dense)            (None, 4)                 804       \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 2,161,604\n",
@@ -1778,54 +1665,54 @@
       "_________________________________________________________________\n",
       "None\n",
       "Epoch 1/20\n",
-      "2/2 [==============================] - 6s 855ms/step - loss: 1.3841 - categorical_accuracy: 0.2951 - val_loss: 1.3366 - val_categorical_accuracy: 0.7143\n",
+      "2/2 [==============================] - 7s 838ms/step - loss: 1.3740 - categorical_accuracy: 0.3934 - val_loss: 1.3246 - val_categorical_accuracy: 0.7143\n",
       "Epoch 2/20\n",
-      "2/2 [==============================] - 0s 288ms/step - loss: 1.3371 - categorical_accuracy: 0.5246 - val_loss: 1.2690 - val_categorical_accuracy: 0.7143\n",
+      "2/2 [==============================] - 0s 259ms/step - loss: 1.3299 - categorical_accuracy: 0.5246 - val_loss: 1.2496 - val_categorical_accuracy: 0.7143\n",
       "Epoch 3/20\n",
-      "2/2 [==============================] - 0s 275ms/step - loss: 1.2836 - categorical_accuracy: 0.5246 - val_loss: 1.1825 - val_categorical_accuracy: 0.7143\n",
+      "2/2 [==============================] - 0s 290ms/step - loss: 1.2650 - categorical_accuracy: 0.5246 - val_loss: 1.1531 - val_categorical_accuracy: 0.7143\n",
       "Epoch 4/20\n",
-      "2/2 [==============================] - 0s 296ms/step - loss: 1.2281 - categorical_accuracy: 0.5246 - val_loss: 1.0482 - val_categorical_accuracy: 0.7143\n",
+      "2/2 [==============================] - 0s 292ms/step - loss: 1.2073 - categorical_accuracy: 0.5246 - val_loss: 1.0094 - val_categorical_accuracy: 0.7143\n",
       "Epoch 5/20\n",
-      "2/2 [==============================] - 0s 279ms/step - loss: 1.1540 - categorical_accuracy: 0.5246 - val_loss: 0.8882 - val_categorical_accuracy: 0.7143\n",
+      "2/2 [==============================] - 0s 290ms/step - loss: 1.1302 - categorical_accuracy: 0.5246 - val_loss: 0.8852 - val_categorical_accuracy: 0.7143\n",
       "Epoch 6/20\n",
-      "2/2 [==============================] - 1s 345ms/step - loss: 1.1527 - categorical_accuracy: 0.5246 - val_loss: 0.9021 - val_categorical_accuracy: 0.7143\n",
+      "2/2 [==============================] - 0s 300ms/step - loss: 1.2178 - categorical_accuracy: 0.5246 - val_loss: 0.8861 - val_categorical_accuracy: 0.7143\n",
       "Epoch 7/20\n",
-      "2/2 [==============================] - 1s 268ms/step - loss: 1.1222 - categorical_accuracy: 0.5246 - val_loss: 0.9352 - val_categorical_accuracy: 0.7143\n",
+      "2/2 [==============================] - 0s 261ms/step - loss: 1.1471 - categorical_accuracy: 0.5246 - val_loss: 0.9305 - val_categorical_accuracy: 0.7143\n",
       "Epoch 8/20\n",
-      "2/2 [==============================] - 0s 289ms/step - loss: 1.0966 - categorical_accuracy: 0.5246 - val_loss: 0.9789 - val_categorical_accuracy: 0.7143\n",
+      "2/2 [==============================] - 0s 261ms/step - loss: 1.0843 - categorical_accuracy: 0.5246 - val_loss: 0.9995 - val_categorical_accuracy: 0.7143\n",
       "Epoch 9/20\n",
-      "2/2 [==============================] - 0s 279ms/step - loss: 1.0780 - categorical_accuracy: 0.5246 - val_loss: 1.0017 - val_categorical_accuracy: 0.7143\n",
+      "2/2 [==============================] - 0s 253ms/step - loss: 1.0866 - categorical_accuracy: 0.5246 - val_loss: 1.0471 - val_categorical_accuracy: 0.7143\n",
       "Epoch 10/20\n",
-      "2/2 [==============================] - 1s 301ms/step - loss: 1.0655 - categorical_accuracy: 0.5246 - val_loss: 0.9914 - val_categorical_accuracy: 0.7143\n",
+      "2/2 [==============================] - 0s 259ms/step - loss: 1.0914 - categorical_accuracy: 0.5246 - val_loss: 1.0683 - val_categorical_accuracy: 0.7143\n",
       "Epoch 11/20\n",
-      "2/2 [==============================] - 1s 338ms/step - loss: 1.0518 - categorical_accuracy: 0.5246 - val_loss: 0.9738 - val_categorical_accuracy: 0.7143\n",
+      "2/2 [==============================] - 0s 258ms/step - loss: 1.0811 - categorical_accuracy: 0.5246 - val_loss: 1.0653 - val_categorical_accuracy: 0.7143\n",
       "Epoch 12/20\n",
-      "2/2 [==============================] - 1s 294ms/step - loss: 1.0144 - categorical_accuracy: 0.5246 - val_loss: 1.0088 - val_categorical_accuracy: 0.7143\n",
+      "2/2 [==============================] - 0s 260ms/step - loss: 1.0580 - categorical_accuracy: 0.5246 - val_loss: 1.0427 - val_categorical_accuracy: 0.7143\n",
       "Epoch 13/20\n",
-      "2/2 [==============================] - 1s 302ms/step - loss: 0.9838 - categorical_accuracy: 0.5246 - val_loss: 1.0106 - val_categorical_accuracy: 0.7143\n",
+      "2/2 [==============================] - 0s 265ms/step - loss: 1.0264 - categorical_accuracy: 0.5246 - val_loss: 1.0133 - val_categorical_accuracy: 0.7143\n",
       "Epoch 14/20\n",
-      "2/2 [==============================] - 1s 294ms/step - loss: 0.9464 - categorical_accuracy: 0.5246 - val_loss: 0.9984 - val_categorical_accuracy: 0.7143\n",
+      "2/2 [==============================] - 0s 268ms/step - loss: 0.9858 - categorical_accuracy: 0.5246 - val_loss: 0.9768 - val_categorical_accuracy: 0.7143\n",
       "Epoch 15/20\n",
-      "2/2 [==============================] - 1s 280ms/step - loss: 0.9207 - categorical_accuracy: 0.5246 - val_loss: 1.0010 - val_categorical_accuracy: 0.7143\n",
+      "2/2 [==============================] - 0s 275ms/step - loss: 0.9358 - categorical_accuracy: 0.5246 - val_loss: 0.9473 - val_categorical_accuracy: 0.7143\n",
       "Epoch 16/20\n",
-      "2/2 [==============================] - 1s 279ms/step - loss: 0.9019 - categorical_accuracy: 0.5574 - val_loss: 1.0122 - val_categorical_accuracy: 0.7143\n",
+      "2/2 [==============================] - 0s 266ms/step - loss: 0.8966 - categorical_accuracy: 0.5574 - val_loss: 0.9352 - val_categorical_accuracy: 0.7143\n",
       "Epoch 17/20\n",
-      "2/2 [==============================] - 0s 273ms/step - loss: 0.8926 - categorical_accuracy: 0.6393 - val_loss: 1.0517 - val_categorical_accuracy: 0.7143\n",
+      "2/2 [==============================] - 0s 273ms/step - loss: 0.8770 - categorical_accuracy: 0.6230 - val_loss: 0.9464 - val_categorical_accuracy: 0.7143\n",
       "Epoch 18/20\n",
-      "2/2 [==============================] - 1s 304ms/step - loss: 0.8410 - categorical_accuracy: 0.6557 - val_loss: 1.0652 - val_categorical_accuracy: 0.7381\n",
+      "2/2 [==============================] - 0s 284ms/step - loss: 0.8148 - categorical_accuracy: 0.6721 - val_loss: 0.9665 - val_categorical_accuracy: 0.7143\n",
       "Epoch 19/20\n",
-      "2/2 [==============================] - 0s 278ms/step - loss: 0.8161 - categorical_accuracy: 0.7049 - val_loss: 1.0560 - val_categorical_accuracy: 0.7381\n",
+      "2/2 [==============================] - 1s 277ms/step - loss: 0.7761 - categorical_accuracy: 0.7541 - val_loss: 0.9540 - val_categorical_accuracy: 0.7619\n",
       "Epoch 20/20\n",
-      "2/2 [==============================] - 1s 305ms/step - loss: 0.7801 - categorical_accuracy: 0.6885 - val_loss: 1.0338 - val_categorical_accuracy: 0.7381\n"
+      "2/2 [==============================] - 0s 271ms/step - loss: 0.7430 - categorical_accuracy: 0.8033 - val_loss: 0.9608 - val_categorical_accuracy: 0.7619\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f9e4e6c8d60>"
+       "<keras.callbacks.History at 0x7f9e06ec2df0>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1840,8 +1727,73 @@
     "\n",
     "print(model.summary())\n",
     "\n",
-    "model.fit(X_train, y_train, validation_split=0.4, epochs=20)\n",
-    "\n"
+    "model.fit(X_train, y_train, validation_split=0.4, epochs=20)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "7697801c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def class_decode(vec):\n",
+    "    np_vec = np.array(vec)\n",
+    "    return np.argmax(np_vec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "1e5f8c24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 51ms/step\n",
+      "1/1 [==============================] - 0s 53ms/step - loss: 1.4747 - categorical_accuracy: 0.5862\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.58      1.00      0.73        15\n",
+      "           1       0.00      0.00      0.00         7\n",
+      "           2       0.00      0.00      0.00         4\n",
+      "           3       0.67      0.67      0.67         3\n",
+      "\n",
+      "    accuracy                           0.59        29\n",
+      "   macro avg       0.31      0.42      0.35        29\n",
+      "weighted avg       0.37      0.59      0.45        29\n",
+      "\n",
+      "0.5862068965517241\n",
+      "0.34959349593495936\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mihaela/miniconda3/envs/tarproject/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/mihaela/miniconda3/envs/tarproject/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/mihaela/miniconda3/envs/tarproject/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1318: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_predicted = model.predict(X_test)\n",
+    "\n",
+    "model.evaluate(x=X_test, y=y_test)\n",
+    "\n",
+    "y_predicted_class = [class_decode(i) for i in y_predicted]\n",
+    "y_test_class = [class_decode(i) for i in y_test]\n",
+    "\n",
+    "print(classification_report(y_test_class, y_predicted_class))\n",
+    "\n",
+    "print(f1_score(y_test_class, y_predicted_class, average='micro'))\n",
+    "print(f1_score(y_test_class, y_predicted_class, average='macro'))"
    ]
   }
  ],
